# made-up-arch

./: CMakeLists.txt  README.md  example.cpp  main.cpp
emulator/: CMakeLists.txt  arithmetic_instructions.cpp  arithmetic_instructions.h  data_instructions.cpp  data_instructions.h  instruction.h  instruction_decoder.cpp  instruction_decoder.h  instruction_registry.h  instructions.h  logical_instructions.cpp  logical_instructions.h  processor.cpp  processor_state.h
emulator/include/emulator/: address_range.h  arithmetic_instructions.h  basic_memory_template.h  common.h  comparison_instructions.h  control_flow_instructions.h  data_instructions.h  instruction.h  instruction_decoder.h  instructions.h  interrupt_vector.h  logical_instructions.h  memory_helpers.h  memory_templates.h  processor.h  processor_state.fwd.h  processor_state.h
emulator/include/emulator/debugging/: human_readable_instruction.h
emulator/include/emulator/peripherals/: peripherals.h  timer.h
emulator/src/: arithmetic_instructions.cpp  common.h  comparison_instructions.cpp  control_flow_instructions.cpp  data_instructions.cpp  instruction_decoder.cpp  logical_instructions.cpp  memory_bus.h  memory_helpers.cpp  memory_templates.cpp  processor.cpp  processor_state.cpp  rw_handlers.h
emulator/src/debugging/: human_readable_instruction.cpp
emulator/src/peripherals/: peripherals.cpp  timer.cpp
emulator/tests/: CMakeLists.txt
emulator/tests/src/: arithmetic_instructions.cpp  comparison_instructions.cpp  control_flow_instructions.cpp  data_instructions.cpp  instruction_tests.cpp  instruction_tests_common.h  interrupts.cpp  logical_instructions.cpp  simple_sequences.cpp
emulator/tests/src/peripherals/: timers.cpp
